--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ESN STARawards</title>
+    <title>ESN Awards</title>
     <base href="/ESN-Awards/">    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
