--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <base href="/ESN-Awards/">    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="The ESN STARawards are given for extraordinary achievements in ESN every year in 14 categories"
+      content="The ESN Awards are given for extraordinary achievements in ESN every year in 14 categories"
     />
     <meta
       name="og:description"
-      content="The ESN STARawards are given for extraordinary achievements in ESN every year in 14 categories"
+      content="The ESN Awards are given for extraordinary achievements in ESN every year in 14 categories"
     />
     <meta property="og:image" content="/assets/images/awards.jpg" />
     <link
